# minitools

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/custom/idcardextract/: main.rs
src/opendef/: main.rs
src/opendef-winform/opendef/: MainForm.Designer.cs  MainForm.cs  Program.cs  opendef.csproj  opendef.sln
src/opendef-winform/opendef/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/pwd/: main.rs
