[package]
name = "minitools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pwd"
path = "src/pwd/main.rs"

[[bin]]
name = "opendef"
path = "src/opendef/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
open = "2.1.2"