[package]
name = "minitools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pwd"
path = "src/pwd/main.rs"

[[bin]]
name = "opendef"
path = "src/opendef/main.rs"


[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
open = "2.1.2"